--- a/index.html
+++ b/index.html
@@ -9,57 +9,21 @@
             margin: 0;
             overflow: hidden;
             background-color: #000000;
-            color: #ffffff;
-            font-family: 'Courier New', Courier, monospace;
         }
         canvas {
             display: block;
-        }
-        #controls {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 15px;
-            background-color: rgba(30, 30, 30, 0.7);
-            border-radius: 5px;
-            width: 250px;
-        }
-        .control-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-size: 14px;
-        }
-        input[type="range"] {
-            width: 100%;
         }
     </style>
 </head>
 <body>
     <canvas id="webgl"></canvas>
 
-    <div id="controls">
-        <div class="control-group">
-            <label for="speed">Animation Speed</label>
-            <input type="range" id="speed" min="0" max="1" value="0.2" step="0.01">
-        </div>
-        <div class="control-group">
-            <label for="distortion">Distortion Amount</label>
-            <input type="range" id="distortion" min="0" max="1" value="0.5" step="0.01">
-        </div>
-         <div class="control-group">
-            <label for="fresnel">Highlight Power</label>
-            <input type="range" id="fresnel" min="0.1" max="5.0" value="1.8" step="0.1">
-        </div>
-    </div>
-
     <script type="importmap">
         {
             "imports": {
                 "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
+                "lil-gui": "https://cdn.jsdelivr.net/npm/lil-gui@0.19/+esm"
             }
         }
     </script>
