--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     #viewport { position: relative; overflow: hidden; }
     #ui { background: rgba(12,12,12,0.96); border-left: 1px solid #1a1a1a; padding: 10px 8px; overflow-y: auto; }
     .note {
-      position: absolute; left: 12px; bottom: 12px; color: #9aa; opacity: 0.8;
+      position: absolute; left: 12px; bottom: 12px; color: #9aa; opacity: 0.9;
       font-size: 12px; line-height: 1.3; pointer-events: none;
       text-shadow: 0 1px 0 rgba(0,0,0,0.6);
     }
@@ -38,8 +38,8 @@
   <div class="layout">
     <div id="viewport">
       <div class="note">
-        Orbit: drag / wheel · Toggle pause: <b>space</b><br/>
-        One evolving shape that folds onto itself; textures approximate thin‑film + diffractive stripes.
+        Drag to orbit · Wheel to zoom · Pause/Play: <b>space</b><br/>
+        The single shape folds over time; textures emulate thin‑film + diffractive stripes.
       </div>
     </div>
     <div id="ui"></div>
