--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       --text: #e7e7e7;
       --accent: #8fd3ff;
     }
-
     html, body {
       margin: 0;
       height: 100%;
@@ -19,8 +18,6 @@
       color: var(--text);
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
     }
-
-    /* Two-column layout: canvas on the left, controls on the right */
     .app {
       display: grid;
       grid-template-columns: 1fr var(--panel-width);
@@ -29,15 +26,8 @@
       width: 100%;
       overflow: hidden;
     }
-
-    #scene-container {
-      position: relative;
-      background: #000;
-    }
-
+    #scene-container { position: relative; background: #000; }
     canvas { display: block; }
-
-    /* Right-side control panel shell */
     #ui {
       position: relative;
       border-left: 1px solid #222;
@@ -46,7 +36,6 @@
       padding: 8px 8px 24px 8px;
       overflow-y: auto;
     }
-
     .brand {
       font-size: 12px;
       letter-spacing: .05em;
@@ -56,16 +45,26 @@
       padding-bottom: 8px;
     }
     .brand b { color: var(--accent); }
-
-    /* Make lil-gui sit flush and fill panel width */
     #ui .lil-gui.root {
       width: calc(var(--panel-width) - 16px) !important;
       max-width: calc(var(--panel-width) - 16px) !important;
     }
-
     a, a:visited { color: #8fd3ff; text-decoration: none; }
     a:hover { text-decoration: underline; }
   </style>
+
+  <!-- Polyfill so import maps work everywhere that supports ESM -->
+  <script async src="https://unpkg.com/es-module-shims@^2/dist/es-module-shims.js"></script>
+
+  <!-- Import map: map bare specifiers to CDN URLs -->
+  <script type="importmap">
+  {
+    "imports": {
+      "three": "https://unpkg.com/three@0.161.0/build/three.module.js",
+      "three/addons/": "https://unpkg.com/three@0.161.0/examples/jsm/"
+    }
+  }
+  </script>
 </head>
 <body>
   <div class="app">
