--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Endless Folding Iridescent Polyhedron</title>
+  <title>Endless Folding Decahedron (Pentagonal Dipyramid)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -49,9 +49,11 @@
       width: calc(var(--panel-width) - 16px) !important;
       max-width: calc(var(--panel-width) - 16px) !important;
     }
+    a, a:visited { color: #8fd3ff; text-decoration: none; }
+    a:hover { text-decoration: underline; }
   </style>
 
-  <!-- Import maps (so bare specifiers like "three" work in the browser) -->
+  <!-- Import maps + polyfill so bare specifiers like "three" work in the browser -->
   <script async src="https://unpkg.com/es-module-shims@^2/dist/es-module-shims.js"></script>
   <script type="importmap">
   {
@@ -67,10 +69,10 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Endless Fold</b> — rigid faces; welded hinges<br/>
-        Iridescence + stripes + cellular + fBm
+        <b>Endless Fold — Decahedron</b><br/>
+        Rigid faces • welded hinges • iridescence + mixed bands
       </div>
-      <!-- lil-gui will be appended here -->
+      <!-- lil-gui mounts here -->
     </aside>
   </div>
 
