--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Endless Folding Decahedron (Pentagonal Dipyramid)</title>
+  <title>Endless Folding Decahedron — Shape Selector</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
-      --panel-width: 320px;
+      --panel-width: 340px;
       --bg: #000;
       --text: #e7e7e7;
       --accent: #8fd3ff;
@@ -28,6 +28,7 @@
     }
     #scene-container { position: relative; background: #000; }
     canvas { display: block; }
+
     #ui {
       position: relative;
       border-left: 1px solid #222;
@@ -49,8 +50,6 @@
       width: calc(var(--panel-width) - 16px) !important;
       max-width: calc(var(--panel-width) - 16px) !important;
     }
-    a, a:visited { color: #8fd3ff; text-decoration: none; }
-    a:hover { text-decoration: underline; }
   </style>
 
   <!-- Import maps + polyfill so bare specifiers like "three" work in the browser -->
@@ -69,10 +68,10 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Endless Fold — Decahedron</b><br/>
-        Rigid faces • welded hinges • iridescence + mixed bands
+        <b>Endless Fold</b> — select shape • welded hinges<br/>
+        Iridescence + mixed interference bands
       </div>
-      <!-- lil-gui mounts here -->
+      <!-- lil-gui attaches here -->
     </aside>
   </div>
 
