--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
     #scene-container { position: relative; background: #000; }
     canvas { display: block; }
     #ui {
-      position: relative;
-      border-left: 1px solid #222;
-      background: #0b0b0b;
+      position: relative; border-left: 1px solid #222; background: #0b0b0b;
       box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
-      padding: 8px 8px 24px 8px;
-      overflow-y: auto;
+      padding: 8px 8px 24px 8px; overflow-y: auto;
     }
     .brand {
       font-size: 12px; letter-spacing: .05em; color: #9aa0a6;
@@ -30,7 +27,7 @@
     #ui .lil-gui.root { width: calc(var(--panel-width) - 16px) !important; max-width: calc(var(--panel-width) - 16px) !important; }
   </style>
 
-  <!-- Import maps + polyfill so bare specifiers like "three" work in the browser -->
+  <!-- Import maps + polyfill (so bare specifiers like "three" work in-browser) -->
   <script async src="https://unpkg.com/es-module-shims@^2/dist/es-module-shims.js"></script>
   <script type="importmap">
   {
