--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <!--
-  Based on the user's original files: index.html and main.js.
-  Citations to user uploads for provenance:
-    - HTML shell: :contentReference[oaicite:0]{index=0}
-    - Original script baseline (structure, UI, renderer): :contentReference[oaicite:1]{index=1}
+  App shell kept from your original index.html. Provenance:
+  :contentReference[oaicite:0]{index=0}
 -->
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Origata v0.46 — Dodecahedron</title>
+  <title>Origata v0.47 — Dodecahedron (Origami)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -74,8 +72,8 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Endless Fold</b> — default: <b>Dodecahedron</b> • welded hinges<br/>
-        Iridescence + mixed interference bands
+        <b>Endless Fold</b> — default: <b>Dodecahedron</b> • rigid paper hinges<br/>
+        Iridescence + interference bands
       </div>
       <!-- lil-gui attaches here -->
     </aside>
