--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Folding Swarm — dynamic edges</title>
+  <title>Folding Brownian Graph</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -52,7 +52,6 @@
     }
   </style>
 
-  <!-- bare imports for three.js -->
   <script async src="https://unpkg.com/es-module-shims@^2/dist/es-module-shims.js"></script>
   <script type="importmap">
   {
@@ -68,10 +67,8 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Folding Swarm</b> — points wander; edges appear when near, drop when far.<br/>
-        Sliders: points • amplitude • frequency • connect / break distances
+        <b>Folding Brownian Graph</b> — points wander; edges appear when near, disappear when far.
       </div>
-      <!-- lil-gui mounts here -->
     </aside>
   </div>
 
