--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!doctype html>
+<!--
+  Shell kept the same as your original index.html (styles, layout, import map).
+  Only the SHAPE GENERATION changed (see main.js). Everything else — material,
+  iridescent shader overlay, bloom/trails/RGB post — remains identical.  :contentReference[oaicite:0]{index=0}
+-->
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Folding Brownian Graph</title>
+  <title>Origata — Folding Brownian Surface</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -52,6 +57,7 @@
     }
   </style>
 
+  <!-- Import maps + polyfill so bare specifiers like "three" work in the browser -->
   <script async src="https://unpkg.com/es-module-shims@^2/dist/es-module-shims.js"></script>
   <script type="importmap">
   {
@@ -67,7 +73,8 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Folding Brownian Graph</b> — points wander; edges appear when near, disappear when far.
+        <b>Endless Fold</b> — Brownian vertices • faces appear when triplets are close<br/>
+        Iridescence + bloom/trails/RGB exactly as before
       </div>
     </aside>
   </div>
