--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!--
-  Shell preserved from your original index.html; UI + import map unchanged.  :contentReference[oaicite:0]{index=0}
-  Only behavior changes live in main.js (expanded trails + RGB controls).
+  Shell preserved from your original index.html; layout, styles and import map unchanged.  :contentReference[oaicite:0]{index=0}
+  Only behavior changes live in main.js (trail blur + luma‑preserving RGB shift).
 -->
 <html lang="en">
 <head>
@@ -72,7 +72,7 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Endless Fold</b> — Brownian polygons; trails & RGB offset expanded.
+        <b>Endless Fold</b> — Brownian polygons; blur the trails; RGB offset keeps brightness.
       </div>
       <!-- lil-gui attaches here -->
     </aside>
