--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!--
-  Built on your original shell (layout/import map/styles). Only logic is updated in main.js.
-  (Source reference: original index.html)  :contentReference[oaicite:0]{index=0}
+  Shell preserved from your original index.html (styles, layout, import map).  :contentReference[oaicite:0]{index=0}
+  The black-screen fix is in main.js (see OutputPass + trail toggling).
 -->
 <html lang="en">
 <head>
@@ -56,7 +56,7 @@
     }
   </style>
 
-  <!-- bare imports for three.js -->
+  <!-- Import maps + ES Module Shims -->
   <script async src="https://unpkg.com/es-module-shims@^2/dist/es-module-shims.js"></script>
   <script type="importmap">
   {
