--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!doctype html>
-<!--
-  Shell preserved from your original index.html (styles, layout, import map).  :contentReference[oaicite:0]{index=0}
-  The black-screen fix is in main.js (see OutputPass + trail toggling).
--->
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Origata — Brownian Surface + Echo Trails</title>
+  <title>Origata — v0.45</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -72,7 +68,7 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Endless Fold</b> — Brownian polygons; echo trails (base stays bright); surface‑anchored points
+        <b>Entity FX</b>
       </div>
     </aside>
   </div>
