--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Origata — v0.45</title>
+  <title>Origata — Brownian Surface + Echo Trails</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -52,7 +52,7 @@
     }
   </style>
 
-  <!-- Import maps + ES Module Shims -->
+  <!-- ES Module Shims + import map -->
   <script async src="https://unpkg.com/es-module-shims@^2/dist/es-module-shims.js"></script>
   <script type="importmap">
   {
@@ -68,8 +68,9 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Entity FX</b>
+        <b>Endless Fold</b> — Brownian polygons • echo trails • presets • reflection map
       </div>
+      <!-- lil-gui attaches here -->
     </aside>
   </div>
 
