--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!doctype html>
-<!--
-  Origata — Brownian polygon surface + echo trails + presets + reflection map
-  Built from your latest HTML shell; panel/layout/import map preserved.  :contentReference[oaicite:0]{index=0}
-  Notes:
-    • Add a `presets.json` next to this file to auto‑load presets (also supports local file picker if opened via file://).
-    • Put a `reflection.mp4` (equirectangular) in the same folder to drive reflections; falls back to reflection.jpg/png/webp.
--->
 <html lang="en">
 <head>
+  <!-- Based on your latest HTML shell. :contentReference[oaicite:0]{index=0} -->
   <meta charset="utf-8" />
   <title>Origata — Brownian Surface + Echo Trails</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -75,7 +69,7 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Endless Fold</b> — Brownian polygons • echo trails • presets • reflection map control
+        <b>Endless Fold</b> — Brownian polygons • echo trails • presets • reflection intensity
       </div>
       <!-- lil-gui attaches here -->
     </aside>
