--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Based on your latest HTML shell. :contentReference[oaicite:0]{index=0} -->
   <meta charset="utf-8" />
-  <title>Origata — Brownian Surface + Echo Trails</title>
+  <title>Origata — Brownian Surface + Presets + Reflection</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
