--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Endless Fold</b> — Brownian polygons • echo trails • presets • reflection intensity
+        <b>Endless Fold</b> — Brownian polygons • echo trails • presets • reflection controls
       </div>
-      <!-- lil-gui attaches here -->
     </aside>
   </div>
 
