--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Origata — Brownian Surface + Presets + Reflection</title>
+  <title>Origata — Brownian Surface • Presets • PBR Reflections</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <style>
     :root {
       --panel-width: 340px;
@@ -68,8 +69,9 @@
     <div id="scene-container" aria-label="Three.js canvas host"></div>
     <aside id="ui">
       <div class="brand">
-        <b>Endless Fold</b> — Brownian polygons • echo trails • presets • reflection controls
+        <b>Endless Fold</b> — Brownian polygons • echo trails • presets • PBR reflections
       </div>
+      <!-- lil-gui attaches here -->
     </aside>
   </div>
 
