--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       <div class="brand">
         <b>Endless Fold</b> — Brownian polygons • echo trails • presets • PBR reflections
       </div>
+      <!-- lil-gui attaches here -->
     </aside>
   </div>
 
