--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Origata — Brownian Surface • Presets • PBR Reflections</title>
+  <title>Origata v0.48</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -78,7 +78,7 @@
     <div id="scene-container" aria-label="Three.js canvas host">
       <!-- Moved out of the control frame; lower-right inside main frame -->
       <div class="brand-overlay">
-        Origata v0.48<br/>Ent
+        Origata v0.48<br/>Entity/FX Inc.
       </div>
     </div>
 
