--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Origata v0.48</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Preload reflection BG images (optional hint) -->
+  <link rel="preload" as="image" href="reflection_1.jpg">
+  <link rel="preload" as="image" href="reflection_2.jpg">
+  <link rel="preload" as="image" href="reflection_3.jpg">
+
   <style>
     :root {
       --panel-width: 340px;
